--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "private": true,
   "dependencies": {
     "apollo-boost": "^0.1.16",
+    "axios": "^0.18.0",
+    "cross-fetch": "^2.2.2",
+    "dotenv": "^6.1.0",
+    "gql": "^1.1.2",
     "graphql": "^14.0.2",
     "graphql-tag": "^2.10.0",
     "normalize.css": "^8.0.0",
