--- a/package.json
+++ b/package.json
@@ -1,22 +1,21 @@
 {
-  "name": "nathias-react",
+  "name": "nathias-ID",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "apollo-boost": "^0.1.16",
-    "axios": "^0.18.0",
     "cross-fetch": "^2.2.2",
-    "dotenv": "^6.1.0",
     "gql": "^1.1.2",
     "graphql": "^14.0.2",
     "graphql-tag": "^2.10.0",
+    "jest-cli": "^23.6.0",
     "normalize.css": "^8.0.0",
     "prop-types": "^15.6.2",
-    "react": "^16.4.2",
+    "react": "^16.5.2",
     "react-apollo": "^2.2.4",
     "react-copy-button-wrapper": "0.0.6",
     "react-copy-to-clipboard": "^5.0.1",
-    "react-dom": "^16.4.2",
+    "react-dom": "^16.5.2",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5"
   },
