--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "^16.5.2",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "1.1.5"
+    "react-scripts": "1.1.5",
+    "react-typing-animation": "^1.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
