--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "react-copy-button-wrapper": "0.0.6",
     "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "^16.5.2",
-    "react-favicon": "0.0.14",
+    "react-helmet": "^5.2.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5",
     "react-typing-animation": "^1.4.0"
