--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "graphql": "^14.0.2",
     "graphql-tag": "^2.10.0",
     "jest-cli": "^23.6.0",
+    "lemon-reset": "^1.1.1",
     "normalize.css": "^8.0.0",
     "prop-types": "^15.6.2",
     "react": "^16.5.2",
